--- a/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
@@ -219,6 +219,7 @@
     <Content Include="images\dummy_profile.png" />
     <Content Include="images\smoke-free1.png" />
     <Content Include="images\smoke-free2.png" />
+    <Content Include="Scripts\boostraps-tagsinput.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
