--- a/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\InterestedPartyController.cs" />
     <Compile Include="Controllers\StoryController.cs" />
+    <Compile Include="Controllers\TagController.cs" />
     <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -219,7 +220,7 @@
     <Content Include="images\dummy_profile.png" />
     <Content Include="images\smoke-free1.png" />
     <Content Include="images\smoke-free2.png" />
-    <Content Include="Scripts\boostraps-tagsinput.js" />
+    <Content Include="Scripts\bootstrap-tagsinput.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -394,6 +395,8 @@
     <Content Include="Views\Admin\BoardcastMessage.cshtml" />
     <Content Include="Views\Home\_PopUp.cshtml" />
     <Content Include="Views\Home\QuitCentres.cshtml" />
+    <Content Include="Views\Shared\_TagField.cshtml" />
+    <Content Include="Views\Shared\_SearchBar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
