--- a/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
@@ -400,6 +400,7 @@
     <Content Include="Views\Account\SignUpSuccessDoctor.cshtml" />
     <Content Include="Views\Account\SignUpSuccessMember.cshtml" />
     <Content Include="Views\Doctor\EditDrProfile.cshtml" />
+    <Content Include="Views\InterestedParty\EditMemberProfile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
