--- a/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
@@ -219,6 +219,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\dummy_article.jpg" />
     <Content Include="images\dummy_profile.png" />
     <Content Include="images\smoke-free1.png" />
     <Content Include="images\smoke-free2.png" />
