--- a/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
@@ -394,10 +394,10 @@
     <Content Include="Views\Account\SignUpSuccessMember.cshtml" />
     <Content Include="Views\Doctor\EditDrProfile.cshtml" />
     <Content Include="Views\Admin\BoardcastMessage.cshtml" />
-    <Content Include="Views\Shared\_PopUp.cshtml" />
     <Content Include="Views\Home\QuitCentres.cshtml" />
     <Content Include="Views\Shared\_TagField.cshtml" />
     <Content Include="Views\Shared\_SearchBar.cshtml" />
+    <Content Include="Views\Home\_PopUp.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
