--- a/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
@@ -401,6 +401,7 @@
     <Content Include="Views\Shared\_TagField.cshtml" />
     <Content Include="Views\Shared\_SearchBar.cshtml" />
     <Content Include="Views\Home\_PopUp.cshtml" />
+    <Content Include="Views\InterestedParty\TrackProgress.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
