Created seed & inserted
Created seed for doc & interested party.

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
@@ -222,10 +222,64 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\article_images\article1.jpg" />
+    <Content Include="images\article_images\article10.jpg" />
+    <Content Include="images\article_images\article11.jpg" />
+    <Content Include="images\article_images\article12.jpg" />
+    <Content Include="images\article_images\article13.jpg" />
+    <Content Include="images\article_images\article14.jpg" />
+    <Content Include="images\article_images\article15.jpg" />
+    <Content Include="images\article_images\article16.jpg" />
+    <Content Include="images\article_images\article17.jpg" />
+    <Content Include="images\article_images\article18.jpg" />
+    <Content Include="images\article_images\article19.jpg" />
+    <Content Include="images\article_images\article2.jpg" />
+    <Content Include="images\article_images\article20.jpg" />
+    <Content Include="images\article_images\article3.jpg" />
+    <Content Include="images\article_images\article4.jpg" />
+    <Content Include="images\article_images\article5.jpg" />
+    <Content Include="images\article_images\article6.jpg" />
+    <Content Include="images\article_images\article7.jpg" />
+    <Content Include="images\article_images\article8.jpg" />
+    <Content Include="images\article_images\article9.jpg" />
+    <Content Include="images\doctor_images\Acacia_Soh.jpg" />
+    <Content Include="images\doctor_images\Alice_Goh.jpg" />
+    <Content Include="images\doctor_images\amy_Khor.jpg" />
+    <Content Include="images\doctor_images\AnJana_Motihar.jpg" />
+    <Content Include="images\doctor_images\Cheah_Yee_Lee.jpg" />
+    <Content Include="images\doctor_images\DeAndre.jpg" />
+    <Content Include="images\doctor_images\Felice_Chua.jpg" />
+    <Content Include="images\doctor_images\Herman.jpg" />
+    <Content Include="images\doctor_images\Khee_Chee_Soo.jpg" />
+    <Content Include="images\doctor_images\Shin_Chan.jpg" />
+    <Content Include="images\doctor_images\T_Agasthian.jpg" />
+    <Content Include="images\doctor_images\Tan_Min_Han.jpg" />
+    <Content Include="images\doctor_images\Tan_Tze_Lee.jpg" />
+    <Content Include="images\doctor_images\William_Huang.jpg" />
     <Content Include="images\dummy_article.jpg" />
     <Content Include="images\dummy_profile.png" />
     <Content Include="images\smoke-free1.png" />
     <Content Include="images\smoke-free2.png" />
+    <Content Include="images\user_images\Dan.jpg" />
+    <Content Include="images\user_images\Darleen.jpg" />
+    <Content Include="images\user_images\David.jpg" />
+    <Content Include="images\user_images\Edna.jpg" />
+    <Content Include="images\user_images\James.jpg" />
+    <Content Include="images\user_images\Jason.jpg" />
+    <Content Include="images\user_images\Joan.jpg" />
+    <Content Include="images\user_images\John.jpg" />
+    <Content Include="images\user_images\Kim.jpg" />
+    <Content Include="images\user_images\leroy.jpg" />
+    <Content Include="images\user_images\Lisa.jpg" />
+    <Content Include="images\user_images\Margaret.jpg" />
+    <Content Include="images\user_images\Mary.jpg" />
+    <Content Include="images\user_images\Michael.jpg" />
+    <Content Include="images\user_images\Peter.jpg" />
+    <Content Include="images\user_images\Phil.jpg" />
+    <Content Include="images\user_images\Raham.jpg" />
+    <Content Include="images\user_images\Steven.jpg" />
+    <Content Include="images\user_images\Susan.jpg" />
+    <Content Include="images\user_images\Tony.jpg" />
     <Content Include="Scripts\bootstrap-tagsinput.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
