--- a/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
@@ -192,6 +192,10 @@
     <Compile Include="Migrations\202010270311530_checkindateidAUTOINCREMENT.Designer.cs">
       <DependentUpon>202010270311530_checkindateidAUTOINCREMENT.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202010271146175_changecigpricetype.cs" />
+    <Compile Include="Migrations\202010271146175_changecigpricetype.Designer.cs">
+      <DependentUpon>202010271146175_changecigpricetype.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Admin.cs" />
     <Compile Include="Models\AdminManageDataPacket.cs" />
@@ -199,6 +203,7 @@
     <Compile Include="Models\ArticlesTag.cs" />
     <Compile Include="Models\BroadcastMessage.cs" />
     <Compile Include="Models\CheckInDate.cs" />
+    <Compile Include="Models\CheckInViewModel.cs" />
     <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\Content.cs" />
     <Compile Include="Models\DoctorCompoundModel.cs" />
@@ -298,6 +303,80 @@
     <Content Include="Scripts\esm\popper.js" />
     <Content Include="Scripts\esm\popper.min.js" />
     <Content Include="Scripts\form-validation.js" />
+    <Content Include="Scripts\fullcalendar\locales-all.js" />
+    <Content Include="Scripts\fullcalendar\locales-all.min.js" />
+    <Content Include="Scripts\fullcalendar\locales\af.js" />
+    <Content Include="Scripts\fullcalendar\locales\ar-dz.js" />
+    <Content Include="Scripts\fullcalendar\locales\ar-kw.js" />
+    <Content Include="Scripts\fullcalendar\locales\ar-ly.js" />
+    <Content Include="Scripts\fullcalendar\locales\ar-ma.js" />
+    <Content Include="Scripts\fullcalendar\locales\ar-sa.js" />
+    <Content Include="Scripts\fullcalendar\locales\ar-tn.js" />
+    <Content Include="Scripts\fullcalendar\locales\ar.js" />
+    <Content Include="Scripts\fullcalendar\locales\az.js" />
+    <Content Include="Scripts\fullcalendar\locales\bg.js" />
+    <Content Include="Scripts\fullcalendar\locales\bs.js" />
+    <Content Include="Scripts\fullcalendar\locales\ca.js" />
+    <Content Include="Scripts\fullcalendar\locales\cs.js" />
+    <Content Include="Scripts\fullcalendar\locales\da.js" />
+    <Content Include="Scripts\fullcalendar\locales\de.js" />
+    <Content Include="Scripts\fullcalendar\locales\el.js" />
+    <Content Include="Scripts\fullcalendar\locales\en-au.js" />
+    <Content Include="Scripts\fullcalendar\locales\en-gb.js" />
+    <Content Include="Scripts\fullcalendar\locales\en-nz.js" />
+    <Content Include="Scripts\fullcalendar\locales\es-us.js" />
+    <Content Include="Scripts\fullcalendar\locales\es.js" />
+    <Content Include="Scripts\fullcalendar\locales\et.js" />
+    <Content Include="Scripts\fullcalendar\locales\eu.js" />
+    <Content Include="Scripts\fullcalendar\locales\fa.js" />
+    <Content Include="Scripts\fullcalendar\locales\fi.js" />
+    <Content Include="Scripts\fullcalendar\locales\fr-ca.js" />
+    <Content Include="Scripts\fullcalendar\locales\fr-ch.js" />
+    <Content Include="Scripts\fullcalendar\locales\fr.js" />
+    <Content Include="Scripts\fullcalendar\locales\gl.js" />
+    <Content Include="Scripts\fullcalendar\locales\he.js" />
+    <Content Include="Scripts\fullcalendar\locales\hi.js" />
+    <Content Include="Scripts\fullcalendar\locales\hr.js" />
+    <Content Include="Scripts\fullcalendar\locales\hu.js" />
+    <Content Include="Scripts\fullcalendar\locales\id.js" />
+    <Content Include="Scripts\fullcalendar\locales\is.js" />
+    <Content Include="Scripts\fullcalendar\locales\it.js" />
+    <Content Include="Scripts\fullcalendar\locales\ja.js" />
+    <Content Include="Scripts\fullcalendar\locales\ka.js" />
+    <Content Include="Scripts\fullcalendar\locales\kk.js" />
+    <Content Include="Scripts\fullcalendar\locales\ko.js" />
+    <Content Include="Scripts\fullcalendar\locales\lb.js" />
+    <Content Include="Scripts\fullcalendar\locales\lt.js" />
+    <Content Include="Scripts\fullcalendar\locales\lv.js" />
+    <Content Include="Scripts\fullcalendar\locales\mk.js" />
+    <Content Include="Scripts\fullcalendar\locales\ms.js" />
+    <Content Include="Scripts\fullcalendar\locales\nb.js" />
+    <Content Include="Scripts\fullcalendar\locales\ne.js" />
+    <Content Include="Scripts\fullcalendar\locales\nl.js" />
+    <Content Include="Scripts\fullcalendar\locales\nn.js" />
+    <Content Include="Scripts\fullcalendar\locales\pl.js" />
+    <Content Include="Scripts\fullcalendar\locales\pt-br.js" />
+    <Content Include="Scripts\fullcalendar\locales\pt.js" />
+    <Content Include="Scripts\fullcalendar\locales\ro.js" />
+    <Content Include="Scripts\fullcalendar\locales\ru.js" />
+    <Content Include="Scripts\fullcalendar\locales\sk.js" />
+    <Content Include="Scripts\fullcalendar\locales\sl.js" />
+    <Content Include="Scripts\fullcalendar\locales\sq.js" />
+    <Content Include="Scripts\fullcalendar\locales\sr-cyrl.js" />
+    <Content Include="Scripts\fullcalendar\locales\sr.js" />
+    <Content Include="Scripts\fullcalendar\locales\sv.js" />
+    <Content Include="Scripts\fullcalendar\locales\th.js" />
+    <Content Include="Scripts\fullcalendar\locales\tr.js" />
+    <Content Include="Scripts\fullcalendar\locales\ug.js" />
+    <Content Include="Scripts\fullcalendar\locales\uk.js" />
+    <Content Include="Scripts\fullcalendar\locales\uz.js" />
+    <Content Include="Scripts\fullcalendar\locales\vi.js" />
+    <Content Include="Scripts\fullcalendar\locales\zh-cn.js" />
+    <Content Include="Scripts\fullcalendar\locales\zh-tw.js" />
+    <Content Include="Scripts\fullcalendar\main.css" />
+    <Content Include="Scripts\fullcalendar\main.js" />
+    <Content Include="Scripts\fullcalendar\main.min.css" />
+    <Content Include="Scripts\fullcalendar\main.min.js" />
     <Content Include="Scripts\index.js.flow" />
     <Content Include="Scripts\esm\popper.min.js.map" />
     <Content Include="Scripts\esm\popper.js.map" />
@@ -464,6 +543,7 @@
     <Content Include="Views\Shared\_SearchBar.cshtml" />
     <Content Include="Views\Home\_PopUp.cshtml" />
     <Content Include="Views\InterestedParty\TrackProgress.cshtml" />
+    <Content Include="Views\InterestedParty\FillInDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -513,6 +593,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202010270311530_checkindateidAUTOINCREMENT.resx">
       <DependentUpon>202010270311530_checkindateidAUTOINCREMENT.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202010271146175_changecigpricetype.resx">
+      <DependentUpon>202010271146175_changecigpricetype.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
