--- a/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
@@ -537,7 +537,7 @@
     <Content Include="Views\Account\SignUpSuccessDoctor.cshtml" />
     <Content Include="Views\Account\SignUpSuccessMember.cshtml" />
     <Content Include="Views\Doctor\EditDrProfile.cshtml" />
-    <Content Include="Views\Admin\BoardcastMessage.cshtml" />
+    <Content Include="Views\Admin\BroadcastMessage.cshtml" />
     <Content Include="Views\Home\QuitCentres.cshtml" />
     <Content Include="Views\Shared\_TagField.cshtml" />
     <Content Include="Views\Shared\_SearchBar.cshtml" />
