--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Web.config
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Web.config
@@ -25,6 +25,11 @@
     <httpRuntime targetFramework="4.7.2" />
     <authentication mode="Windows" />
   </system.web>
+  <system.webServer>
+	<staticContent>
+		<mimeMap fileExtension=".geojson" mimeType="application/geojson" />
+	</staticContent>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
