--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Web.config
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Web.config
@@ -20,6 +20,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <globalization uiCulture="en-SG" culture="en-SG" />
     <sessionState mode="InProc" cookieless="false" timeout="80" />
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
