--- a/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
@@ -547,6 +547,7 @@
     <Content Include="Views\Home\_PopUp.cshtml" />
     <Content Include="Views\InterestedParty\TrackProgress.cshtml" />
     <Content Include="Views\InterestedParty\FillInDetails.cshtml" />
+    <Content Include="Views\Article\EditArticle.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
