--- a/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
@@ -271,6 +271,7 @@
     <Content Include="images\doctor_images\William_Huang.jpg" />
     <Content Include="images\dummy_article.jpg" />
     <Content Include="images\dummy_profile.png" />
+    <Content Include="images\placeholder.png" />
     <Content Include="images\smoke-free1.png" />
     <Content Include="images\smoke-free2.png" />
     <Content Include="images\user_images\Dan.jpg" />
@@ -405,6 +406,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\leaflet-knn.min.js" />
     <Content Include="Scripts\leaflet.ajax.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\popper-utils.js" />
